After adding hero item

--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Ruhul Amin Rokon Portfoloi</title>
-</head>
-<body>
-    <header>
-        <div class="header">
-            
+  </head>
+  <body>
+    <div id="main-container">
+      <div id="header-container">
+        <div id="header-hero">
+          <header>
+            <div class="header">
+              <div class="logo-container">
+                <div class="logo">
+                  <img src="./rsc/LogoIICT.png" alt="" />
+                </div>
+                <div class="dialogue">
+                  <p><strong>ICT</strong></p>
+                  <p><strong>Solution</strong></p>
+                </div>
+              </div>
+              <div class="navbar">
+                <nav>
+                  <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Works</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li id="download"><a href="#">Download CV</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </header>
+          <!-- Hero Item start here -->
+          <section id="hero-item">
+            <div class="hero-container">
+              <div id="buble-1"></div>
+              <div class="title">
+                <span>Hello I'm</span> <br />
+                <h1>Ruhul Amin Rokon</h1>
+              </div>
+              <div class="photo">
+                <div class="steam" id="steam1"></div>
+                <div class="steam" id="steam2"></div>
+                <div class="steam" id="steam3"></div>
+                <div class="steam" id="steam4"></div>
+                <img src="./rsc/photo.png" alt="" />
+              </div>
+            </div>
+          </section>
         </div>
-        
-    </header>
-</body>
+      </div>
+    </div>
+  </body>
 </html>
