After adding about me

--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Ruhul Amin Rokon Portfoloi</title>
   </head>
   <body>
+      <!--Go to top button-->
+      <div id="go-to-top">
+        <a href="#"
+          ><i class="fa-solid fa-arrow-up-from-bracket"></i><br />
+          <span>Top</span>
+        </a>
+      </div>
+      <!-- End of Go to top button-->
+    <!-- Social media link side bar -->
+    <div id="social-media">
+      <div id="facebook">
+        <a href="https://www.facebook.com/" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+      </div>
+      <div id="x-twitter">
+        <a href="https://x.com/" target="_blank"
+          ><i class="fa-brands fa-x-twitter"></i></a
+        ><br />
+      </div>
+      <div id="youtube">
+        <a href="https://www.youtube.com/" target="_blank"
+          ><i class="fa-brands fa-youtube"></i></a
+        ><br />
+      </div>
+    </div>
+    <!-- End of Social media link side bar -->
+
     <div id="main-container">
       <div id="header-container">
         <div id="header-hero">
@@ -25,7 +60,7 @@
                 <nav>
                   <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#about-sec">About</a></li>
                     <li><a href="#">Works</a></li>
                     <li><a href="#">Service</a></li>
                     <li><a href="#">Contact</a></li>
@@ -39,10 +74,23 @@
           <!-- Hero Item start here -->
           <section id="hero-item">
             <div class="hero-container">
-              <div id="buble-1"></div>
-              <div class="title">
-                <span>Hello I'm</span> <br />
-                <h1>Ruhul Amin Rokon</h1>
+              <!-- <div id="buble-1"></div> -->
+              <div class="hero-text">
+                <div class="title">
+                  <span>Hello I'm</span>
+                  <h1>Ruhul Amin Rokon</h1>
+                  <br />
+                </div>
+                <div class="content">
+                  <div class="slider-wrapper">
+                    I can write
+                    <div class="slider">
+                      <div class="slider-text-1">React</div>
+                      <div class="slider-text-2">HTML</div>
+                      <div class="slider-text-3">CSS</div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="photo">
                 <div class="steam" id="steam1"></div>
@@ -50,6 +98,16 @@
                 <div class="steam" id="steam3"></div>
                 <div class="steam" id="steam4"></div>
                 <img src="./rsc/photo.png" alt="" />
+              </div>
+            </div>
+          </section>
+          <section id="about-sec">
+            <div class="about-me">
+              <div class="img-slide">
+                
+              </div>
+              <div class="details-me">
+
               </div>
             </div>
           </section>
