After adding about me and achieve

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>Ruhul Amin Rokon Portfoloi</title>
   </head>
   <body>
-      <!--Go to top button-->
-      <div id="go-to-top">
-        <a href="#"
-          ><i class="fa-solid fa-arrow-up-from-bracket"></i><br />
-          <span>Top</span>
-        </a>
-      </div>
-      <!-- End of Go to top button-->
+    <!--Go to top button-->
+    <div id="go-to-top">
+      <a href="#"
+        ><i class="fa-solid fa-arrow-up-from-bracket"></i><br />
+        <span>Top</span>
+      </a>
+    </div>
+    <!-- End of Go to top button-->
     <!-- Social media link side bar -->
     <div id="social-media">
       <div id="facebook">
@@ -43,13 +43,13 @@
     <!-- End of Social media link side bar -->
 
     <div id="main-container">
-      <div id="header-container">
+      <div class="header-container">
         <div id="header-hero">
           <header>
             <div class="header">
               <div class="logo-container">
                 <div class="logo">
-                  <img src="./rsc/LogoIICT.png" alt="" />
+                  <img src="./rsc/LogoIICT.png" alt="Logo Image" />
                 </div>
                 <div class="dialogue">
                   <p><strong>ICT</strong></p>
@@ -61,9 +61,9 @@
                   <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about-sec">About</a></li>
-                    <li><a href="#">Works</a></li>
+                    <li><a href="#works">Works</a></li>
                     <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li><a href="#">Blog</a></li>
                     <li id="download"><a href="#">Download CV</a></li>
                   </ul>
@@ -91,6 +91,11 @@
                     </div>
                   </div>
                 </div>
+                <div id="button">
+                  <div id="arrow"><i class="fa-solid fa-angles-right"></i>
+                  </div>
+                  <a href="#contact">Hire Me</a>
+                </div>
               </div>
               <div class="photo">
                 <div class="steam" id="steam1"></div>
@@ -101,15 +106,102 @@
               </div>
             </div>
           </section>
-          <section id="about-sec">
-            <div class="about-me">
-              <div class="img-slide">
-                
-              </div>
-              <div class="details-me">
-
+        </div>
+      </div>
+      <div class="container">
+        <section id="about-sec">
+          <div class="about-me">
+            <div class="img-slide">
+              <img src="./rsc/aboutme.jpeg" alt="About Me Portrait" />
+            </div>
+            <div class="details-me">
+              <h2>About me</h2>
+              <h1>Passionate Web Developer</h1>
+              <p>
+                Fast forward to my 12th grade and even into my Bachelor's in
+                Computer Science, web development wasn’t something we
+                specifically studied. But that didn’t stop me. I was already
+                hooked by then, and YouTube became my best friend for learning.
+                I’d spend hours watching tutorials and creating small projects
+                using HTML, CSS, and JavaScript—nothing fancy, but it was enough
+                to keep me going.
+                <br /><br />
+                As I kept going, I realized it wasn’t enough to know just the
+                front end. I needed to understand how to connect things to the
+                back end, so I got into <strong> HTML</strong> and started
+                working with <strong>Responsive CSS</strong>,
+                <strong>React</strong> and <strong>MongoDB</strong>. Learning
+                how the front and back ends come together gave me a much clearer
+                picture of how full-scale web applications work. <br /><br />
+                And, of course, I started using Git to manage my code and
+                collaborate more easily, which was a game-changer. It really
+                prepared me for the kind of teamwork I know I’ll need in the
+                future.
+              </p>
+              <br /><br />
+              <div>
+                <table>
+                  <tr>
+                    <td>Name</td>
+                    <td>Ruhul Amin Rokon</td>
+                    <td>Phone</td>
+                    <td>+8801621661944</td>
+                  </tr>
+                  <tr>
+                    <td>Age</td>
+                    <td>39</td>
+                    <td>Email</td>
+                    <td>rarokon@gmail.com</td>
+                  </tr>
+                  <tr>
+                    <td>Occupation</td>
+                    <td>Private Service</td>
+                    <td>Nationality</td>
+                    <td>Bangladeshi</td>
+                  </tr>
+                  <tr>
+                    <td>Education</td>
+                    <td>B.Sc In CSE</td>
+                    <td>Freelance</td>
+                    <td>Available</td>
+                  </tr>
+                </table>
               </div>
             </div>
+          </div>
+        </section>
+      </div>
+      <div class="achieve-container">
+        <div class="container">
+          <div class="grid-container">
+            <div class="grid-item">
+              <div>
+                <h1>20</h1>
+              </div>
+              <div>
+                <h2>Years of Experience</h2>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div>
+                <h1>100+</h1>
+              </div>
+              <div>
+                <h2>Worldwide Clients</h2>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div>
+                <h1>1K+</h1>
+              </div>
+              <div>
+                <h2>Total Projects</h2>
+              </div>
+            </div>
+          </div>
+
+          <section id="works">
+
           </section>
         </div>
       </div>
