after adding works section and footer section

--- a/index.html
+++ b/index.html
@@ -43,71 +43,74 @@
     <!-- End of Social media link side bar -->
 
     <div id="main-container">
-      <div class="header-container">
-        <div id="header-hero">
-          <header>
-            <div class="header">
-              <div class="logo-container">
-                <div class="logo">
-                  <img src="./rsc/LogoIICT.png" alt="Logo Image" />
+      <header id="header">
+        <div class="header-container">
+          <div id="header-hero">
+            <header>
+              <div class="header">
+                <div class="logo-container">
+                  <div class="logo">
+                    <img src="./rsc/LogoIICT.png" alt="Logo Image" />
+                  </div>
+                  <div class="dialogue">
+                    <p><strong>ICT</strong></p>
+                    <p><strong>Solution</strong></p>
+                  </div>
                 </div>
-                <div class="dialogue">
-                  <p><strong>ICT</strong></p>
-                  <p><strong>Solution</strong></p>
+                <div class="navbar">
+                  <nav>
+                    <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#about-sec">About</a></li>
+                      <li><a href="#works">Works</a></li>
+                      <li><a href="#">Service</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                      <li><a href="#">Blog</a></li>
+                      <li id="download"><a href="#">Download CV</a></li>
+                    </ul>
+                  </nav>
                 </div>
               </div>
-              <div class="navbar">
-                <nav>
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about-sec">About</a></li>
-                    <li><a href="#works">Works</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li id="download"><a href="#">Download CV</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-          </header>
-          <!-- Hero Item start here -->
-          <section id="hero-item">
-            <div class="hero-container">
-              <!-- <div id="buble-1"></div> -->
-              <div class="hero-text">
-                <div class="title">
-                  <span>Hello I'm</span>
-                  <h1>Ruhul Amin Rokon</h1>
-                  <br />
-                </div>
-                <div class="content">
-                  <div class="slider-wrapper">
-                    I can write
-                    <div class="slider">
-                      <div class="slider-text-1">React</div>
-                      <div class="slider-text-2">HTML</div>
-                      <div class="slider-text-3">CSS</div>
+            </header>
+            <!-- Hero Item start here -->
+            <section id="hero-item">
+              <div class="hero-container">
+                <!-- <div id="buble-1"></div> -->
+                <div class="hero-text">
+                  <div class="title">
+                    <span>Hello I'm</span>
+                    <h1>Ruhul Amin Rokon</h1>
+                    <br />
+                  </div>
+                  <div class="content">
+                    <div class="slider-wrapper">
+                      I can write
+                      <div class="slider">
+                        <div class="slider-text-1">React</div>
+                        <div class="slider-text-2">HTML</div>
+                        <div class="slider-text-3">CSS</div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div id="button">
-                  <div id="arrow"><i class="fa-solid fa-angles-right"></i>
+                  <div id="button">
+                    <div id="arrow">
+                      <i class="fa-solid fa-angles-right"></i>
+                    </div>
+                    <a href="#contact">Hire Me</a>
                   </div>
-                  <a href="#contact">Hire Me</a>
+                </div>
+                <div class="photo">
+                  <div class="steam" id="steam1"></div>
+                  <div class="steam" id="steam2"></div>
+                  <div class="steam" id="steam3"></div>
+                  <div class="steam" id="steam4"></div>
+                  <img src="./rsc/photo.png" alt="" />
                 </div>
               </div>
-              <div class="photo">
-                <div class="steam" id="steam1"></div>
-                <div class="steam" id="steam2"></div>
-                <div class="steam" id="steam3"></div>
-                <div class="steam" id="steam4"></div>
-                <img src="./rsc/photo.png" alt="" />
-              </div>
-            </div>
-          </section>
+            </section>
+          </div>
         </div>
-      </div>
+      </header>
       <div class="container">
         <section id="about-sec">
           <div class="about-me">
@@ -199,12 +202,88 @@
               </div>
             </div>
           </div>
-
-          <section id="works">
-
-          </section>
         </div>
       </div>
+      <section id="works">
+        <div class="port-title">
+          <h2>Portfolio</h2>
+          <h1>My works</h1>
+        </div>
+        <div class="my-work-grid">
+          <div class="work-item">
+            <img src="./rsc/w1.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w2.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w3.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w4.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w5.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w6.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w7.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w8.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w9.jpg" alt="My work image" />
+          </div>
+          <div class="work-item">
+            <img src="./rsc/w10.jpg" alt="My work image" />
+          </div>
+        </div>
+      </section>
+      <footer id="footer">
+        <div id="footer-container">
+          <div>
+            <div class="footer-logo-container">
+              <div class="logo">
+                <img src="./rsc/LogoIICT.png" alt="Logo Image" />
+              </div>
+              <div class="dialogue">
+                <p><strong>ICT</strong></p>
+                <p><strong>Solution</strong></p>
+              </div>
+            </div>
+            <p>All rights reserved Khalid Saifullah &copy; 2024</p>
+          </div>
+
+          <div class="newletter">
+            <h2>Subscribe to our newsletter</h2>
+            <div class="form">
+              <form action="">
+                <input
+                  type="email"
+                  placeholder="Enter your email address"
+                  required
+                />
+                <button class="bt">Subscribe</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="footer-menu">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#about-sec">About</a></li>
+              <li><a href="#works">Works</a></li>
+              <li><a href="#">Service</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="#">Blog</a></li>
+              <li id="download"><a href="#">Download CV</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
